# winc_wifi

./: readme.md
part1/: CMakeLists.txt  winc_pico_part1.c  winc_wifi.c  winc_wifi.h
part2/: CMakeLists.txt  tcp_tx.py  udp_tx.py  winc_pico_part2.c  winc_sock.c  winc_sock.h  winc_wifi.c  winc_wifi.h
